--- a/package.json
+++ b/package.json
@@ -5,7 +5,8 @@
   "main": "main.js",
   "scripts": {
     "start": "electron .",
-    "watch": "webpack --config webpack.common.js --watch"
+    "watch": "webpack --config webpack.config.js --watch",
+    "rebuild":  "electron-rebuild  -f -w sqlite3"
   },
   "repository": {
     "type": "git",
@@ -14,17 +15,22 @@
   "author": "isknaderABBASSI",
   "license": "ISC",
   "dependencies": {
+    "@ant-design/icons": "^4.6.2",
     "@babel/core": "^7.14.3",
     "@babel/preset-env": "^7.14.4",
     "@babel/preset-react": "^7.13.13",
+    "antd": "^4.16.1",
     "babel-loader": "^8.2.2",
     "css-loader": "^5.2.6",
     "electron": "^13.1.0",
+    "electron-rebuild": "^2.3.5",
     "electron-reload": "^1.5.0",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "sass": "^1.34.1",
     "sass-loader": "^12.0.0",
+    "sequelize": "^6.6.5",
+    "sqlite3": "^5.0.2",
     "style-loader": "^2.0.0",
     "webpack": "^5.38.1",
     "webpack-cli": "^4.7.0"
